# tinyrick

./: .gitignore  README.md  Subhalive.md  stack.yaml  tinyrick.cabal
app/: EditorRick.hs  Main.hs  ShaderRick.hs  TextureRick.hs  VRRick.hs  geo.vert  shader-simple.frag  shader-texture.frag  shader.frag
src/: ShaderRick.hs  TinyRick.hs
src/TinyRick/: Buffer.hs  Editor.hs  FindPackageDBs.hs  Recompiler1.hs  Recompiler2.hs  Render.hs  SubHalive.hs  TextInput.hs  glyphQuad.frag  glyphQuad.vert
