name:                tinyrick
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/lukexi/tinyrick#readme
license:             BSD3
license-file:        LICENSE
author:              Luke Iannini
maintainer:          lukexi@me.com
copyright:           Luke Iannini
category:            Graphics
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     TinyRick
                     , TinyRick.Render
                     , ShaderRick
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , lens-extra
                     , mtl
                     , glfw-pal
                     , gl-pal
                     , freetype-gl-mini
  default-language:    Haskell2010
  ghc-options:         -Wall -O2

executable tinyrick
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tinyrick
                     , gl-pal
                     , glfw-pal
                     , freetype-gl-mini
                     , halive
                     , lens-extra
                     , mtl
                     , random
                     , containers
  default-language:    Haskell2010

executable shaderrick
  hs-source-dirs:      app
  main-is:             ShaderRick.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tinyrick
                     , gl-pal
                     , glfw-pal
                     , freetype-gl-mini
                     , halive
                     , lens-extra
                     , mtl
                     , random
                     , containers
                     , time
  default-language:    Haskell2010

executable texturerick
  hs-source-dirs:      app
  main-is:             TextureRick.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tinyrick
                     , gl-pal
                     , glfw-pal
                     , freetype-gl-mini
                     , halive
                     , lens-extra
                     , mtl
                     , random
                     , containers
                     , time
  default-language:    Haskell2010

executable editorrick
  hs-source-dirs:      app
  main-is:             EditorRick.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tinyrick
                     , gl-pal
                     , glfw-pal
                     , freetype-gl-mini
                     , halive
                     , lens-extra
                     , mtl
                     , random
                     , containers
                     , time
  default-language:    Haskell2010

executable vrrick
  hs-source-dirs:      app
  main-is:             VRRick.hs
  ghc-options:         -Wall -O2 -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tinyrick
                     , gl-pal
                     , glfw-pal
                     , freetype-gl-mini
                     , vr-pal
                     , halive
                     , lens-extra
                     , mtl
                     , random
                     , containers
                     , time
                     , filepath
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lukexi/tinyrick
